welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: ';' expected but ')' found.
	if ((a<=19 && a>13) || (b>=13 && b<=19)) || (13<=c && c<=19)){
                                                                    ^